# homoglyphs

./: .flake8  README.md  generate.py  pyproject.toml  tests.py
.github/: dependabot.yml
.github/workflows/: actions-scan.yml  codeql-analysis.yml  generate.yml  performance-benchmarks.yml  publish.yml  test.yml
homoglyphs_fork/: __init__.py  confusables.json  context.py  core.py  exceptions.py
homoglyphs_fork/data/: categories.json  confusables.json  languages.json
tests/: test_benchmarks.py
