[project]
name = "homoglyphs_fork"
authors = [{name = "orsinium", email = "master_fess@mail.ru"}]
maintainers = [{name = "Matt Copperwaite", email = "matt@copperwaite.net"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "description"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.rye]
dev-dependencies = ["flake8>=7.0.0"]
[tool.rye.scripts]
lint = "flake8 . --count --show-source --statistics"

[tool.dephell.main]
from = {format = "flit", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}





[project.urls]
Home = "https://github.com/yamatt/homoglyphs"
