[project]
name = "homoglyphs_fork"
requires-python = ">=3.9"
authors = [{ name = "orsinium", email = "master_fess@mail.ru" }]
maintainers = [{ name = "Matt Copperwaite", email = "matt@copperwaite.net" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
    "description",
    "version",
] # Important: tells tools the version isn't static

[project.urls]
Home = "https://github.com/yamatt/homoglyphs"


[tool.uv]
dev-dependencies = [
    "bandit>=1.8.6",
    "black>=25.11.0",
    "flake8>=7.0.0",
    "isort>=6.1.0",
]

[tool.dephell.main]
from = { format = "flit", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
# Tell uv to use hatchling as the builder
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"             # VCS = Version Control System (Git)
fallback-version = "0.0.0" # <--- Add this line

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # Ensures clean versions like 1.0.1
